feat: adding mobile css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="logo">
         <img src="./assets/logo.svg" alt="Studio Ghibli">
       </div>
-      <div class="links">
+      <div class="social">
         <a href="#">
           <img src="./assets/icons/google.svg" alt="Google">
         </a>
@@ -41,17 +41,19 @@
       </div>
       <div class="panel">
         <strong>HAYAO MIYAZAKI</strong>
-        <h1>A VIAGEM
+        <h1>A VIAGEM <br>
           DE CHIHIRO</h1>
         <p>Chihiro chega a um mundo mágico dominado por uma bruxa. Aqueles que a desobedecem são transformados em
           animais.</p>
-        <button class="primary">
-          <img src="./assets/icons/play.svg" alt="play icon">
-          assistir agora
-        </button>
-        <button class="secondary">
-          assista o trailer
-        </button>
+        <div class="watch-controls">
+          <button class="primary">
+            <img src="./assets/icons/play.svg" alt="play icon">
+            assistir agora
+          </button>
+          <button class="secondary">
+            assista o trailer
+          </button>
+        </div>
       </div>
     </main>
   </div>
